# etching_simulations

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
benchmarks/: bench_derivatives.py  bench_flux_accumulation.py  bench_level_set.py  bench_ray_sampling.py  common.py  run_all.py
docs/: after_mit_license_changes.md  architecture.md  examples.md  license_audit.md  mit_license_changes.md  mps_metal.md  numerical_methods.md  optix_external.md  performance.md  physics.md  post_mit_feature_spec.md  refactor_plan.md  rewrite_plan.md  validation.md
examples/: __init__.py  _common.py  directional_etch_2d.py  directional_etch_3d.py  flux_deposition_2d.py  flux_deposition_3d.py  isotropic_deposition_2d.py  isotropic_etch_2d.py  masked_trench_etch_2d.py  sf6_sinusoid_etch_2d.py
jaxps/: __init__.py
jaxps/experimental/: __init__.py  spectral.py
jaxps/geometry/: __init__.py  derivatives.py  extrude.py  grid.py  masks.py  mesh.py  normals.py  sdf.py  slice.py
jaxps/io/: __init__.py  vtk.py  (+2 more)
scripts/: check_mps_backend.py  run_heavy_validation.py
tests/: test_benchmarks.py  test_derivatives.py  test_devices.py  test_examples_import.py  test_flux.py  test_grid.py  test_level_set.py  test_materials.py  test_models.py  test_mps_backend.py  test_normals.py  test_optix_boundary.py  test_post_mit_features.py  test_rays.py  test_refinement.py  test_reinitialization.py  test_sdf.py  test_spectral.py  test_time_integration.py  test_validation_3d.py  test_validation_circle.py  test_validation_plane.py  test_visibility.py  test_vtk_output.py
(+28 files in other folders)
