[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxps"
version = "0.1.0"
description = "Clean-room Python/JAX level-set process simulation kernels for etching and deposition."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "jaxps contributors" }
]
dependencies = [
  "jax",
  "jaxlib",
]

[project.optional-dependencies]
test = [
  "numpy",
  "pytest",
]
build = [
  "setuptools>=68",
  "wheel",
]
plot = [
  "matplotlib",
]
io = [
  "meshio",
]
dev = [
  "numpy",
  "pytest",
  "ruff",
  "setuptools>=68",
  "wheel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not slow and not mps'"
markers = [
  "slow: heavier CPU/GPU validation checks",
  "mps: checks requiring Apple JAX Metal/MPS backend",
]

[tool.ruff]
line-length = 100
target-version = "py310"
